; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq_cpu.c_mips_mt_cpu_irq_ack.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_irq_cpu.c_mips_mt_cpu_irq_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIPS_CPU_IRQ_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mips_mt_cpu_irq_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mips_mt_cpu_irq_ack(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @dvpe()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @MIPS_CPU_IRQ_BASE, align 4
  %7 = sub i32 %5, %6
  %8 = shl i32 256, %7
  %9 = call i32 @clear_c0_cause(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @evpe(i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @mask_mips_mt_irq(i32 %12)
  ret void
}

declare dso_local i32 @dvpe(...) #1

declare dso_local i32 @clear_c0_cause(i32) #1

declare dso_local i32 @evpe(i32) #1

declare dso_local i32 @mask_mips_mt_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
